c4-customer/base/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c4-customer-v1
  labels:
    version: v1
    app: c4-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: c4-customer
  template:
    metadata:
      labels:
        version: v1
        app: c4-customer
    spec:
      containers:
      - name: c4-customer
        image: fernandocagale/c4-customer
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
